# deepin-herdr

./: .gitignore  CMakeLists.txt
debian/: changelog  control  rules
src/: main.cpp  mainwindow.cpp  mainwindow.h  selection.rs  settingsdialog.cpp  settingsdialog.h  version.h.in
src/app/: api.rs
src/assets/: deepin-herdr.desktop
src/client/: mod.rs
src/platform/: linux.rs
src/server/: headless.rs
src/terminalwidget6-overlay/: qtermwidget_export.h
translations/: deepin-herdr.ts  deepin-herdr_zh_CN.ts
